# perps

./: .gitignore  Cargo.toml  LICENSE  README.md  test_notebook.py
example/: client.py  requirements.txt
examples/: README.md  client.py  client.ts  package.json  perpetuals_tutorial.ipynb  requirements.txt  test_client.py
scripts/: 1_build.sh  2_getsol.sh  3_deploy.sh  4_runexample.sh  build.bat  build.sh  deploy.bat  deploy.sh  get_sol.sh  init_market.sh  setup.bat  setup.sh  setup_tokens.sh  test_setup.sh
src/: lib.rs  tests.rs
