[package]
name = "simple_perps"
version = "0.1.0"
edition = "2021"
description = "Minimal Perpetuals (Perps) Program for Solana - Educational implementation"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/st-mn/perps"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.0"
borsh = "0.10"

[features]
no-entrypoint = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1